# cliparse

./: .clang-format  CMakeLists.txt  Config.cmake.in  README.md
examples/: CMakeLists.txt  add_program.cpp  calc2_program.cpp  calc_program.cpp  cat_program.cpp
include/: cliparse.hpp
include/cliparse/: argument.hpp  argument_parser.hpp  command.hpp  common.hpp  option.hpp  usage.hpp
tests/: CMakeLists.txt  one_argument_program.cpp  one_flag_program.cpp  one_option_program.cpp  subcommands_program.cpp  test.cpp  trivial_program.cpp
